# cctv

./: README.md  main.py  main_window.ui  pyproject.toml  test.py
