[project]
name = "cctv"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
requires-python = "~3.10"
dependencies = [
    "torch (==2.5.0)",
    "torchvision (==0.20.0)",
    "torchaudio (==2.5.0)",
    "numpy (==1.26.4)",
    "opencv-python (==4.9.0.80)",
    "ultralytics (>=8.4.19,<9.0.0)",
    "f-yolov8 (>=0.0.9,<0.0.10)",
    "f-dpi (>=0.0.7,<0.0.8)",
    "pyqt5 (==5.15.10)",
    "pyqt5-qt5 (==5.15.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
torchaudio = {source = "pytorch-gpu"}
